# skZemax

./: .readthedocs.yaml  README.md  env.yml  main.py  pyproject.toml  skZemax  skZemax.pub
.github/workflows/: nightly.yml  release.yml  test.yml
conda.recipe/: meta.yaml
docs/source/: conf.py  index.rst
docs/source/Examples/: e01_new_file_and_quickfocus.ZDA  e01_new_file_and_quickfocus.zmx  e02_SimpleRayTrace.ZDA  e02_SimpleRayTrace.zmx  e03_open_file_and_optimize.CFG  e03_open_file_and_optimize.ZDA  e03_open_file_and_optimize.zmx  e03_open_file_and_optimize_initial_Prescription.txt  e03_open_file_and_optimize_optimized_Prescription.txt  e07_TiltDecenterAndMFOperand.ZDA  e07_TiltDecenterAndMFOperand.zmx  example01.ipynb  example02.ipynb  example03.ipynb  example04.py  example05.py  example06.py  example07.ipynb  example07.py  example08.py  index.rst
docs/source/api/: CAD_functions.rst  LDE_functions.rst  MCE_functions.rst  MFE_functions.rst  NCE_detector_functions.rst  NCE_functions.rst  RayAiming_functions.rst  ZOSAPI_interface_functions.rst  analyses_functions.rst  analyses_plotting_functions.rst  application.rst  c_print.rst  field_functions.rst  index.rst  solver_functions.rst  system_functions.rst  utility_functions.rst  visualization_functions.rst  wavelength_functions.rst
src/: _version.py
src/skZemax/: skZemaxClass.py
src/skZemax/ZemaxAnalysesFiles/: Footprint.txt  HuygensPSF.txt  PrescriptionDataSettings.txt  SurfaceDataSetting.txt
src/skZemax/ZemaxConfigFiles/: FFTMTF.CFG  FootprintSettings.CFG  HuygensMtf.CFG  SurfaceDataSettings.CFG
src/skZemax/ZemaxDetectorFiles/: e08_NSCEDetectorDataPol.DDP  e08_NSCEDetectorDataRect.DDR
src/skZemax/skZemax_subfunctions/: _CAD_functions.py  _LDE_functions.py  _MCE_functions.py  _MFE_functions.py  _NCE_detector_functions.py  _NCE_functions.py  _ZOSAPI_interface_functions.py  _analyses_functions.py  _analyses_plotting_functions.py  _app.py  _c_print.py  _field_functions.py  _rayaiming_functions.py  _solver_functions.py  _system_functions.py  _utility_functions.py  _visualization_functions.py  _wavelength_functions.py
tests/: test_someting.py
