[build-system]
requires = ["setuptools>64", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skZemax"
dynamic = ["version"]
description="A python API developed by the University of Saskatchewan Atmospheric Research Group to interface with Ansys Zemax OpticStudio. "
readme = "README.md"
authors = [
    { name = "Daniel Letros", email = "daniel.letros@usask.ca" },
]
requires-python = ">=3.13"

dependencies = [
    "alive-progress>=3.3.0",
    "matplotlib>=3.10.8",
    "myst-nb>=1.3.0",
    "numpy>=2.4.2",
    "pythonnet>=3.0.5",
    "sphinx>=9.1.0",
    "sphinx-book-theme>=1.1.4",
    "sphinx-design>=0.7.0",
    "xarray>=2026.2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "post-release" 
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",  # Python 3.12
]
testpaths = ["tests"]


